--- a/Pinger 3000/package.json
+++ b/Pinger 3000/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "Pinger 3000",
+  "name": "pinger3000",
   "version": "1.0.0",
   "description": "A small electron app to see his ping",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/Azahet/Pinger-3000,
-  "keywords": [
-    "3000"
-  ],
   "author": "Azahet",
-  "license": "CC0-1.0",
+  "license": "ISC",
   "devDependencies": {
     "electron": "^2.0.0"
+  },
+  "dependencies": {
+    "electron-reload": "^1.2.5",
+    "ping": "^0.2.2"
   }
 }
